--- a/FunctionApp.Logic/FunctionApp.Logic.csproj
+++ b/FunctionApp.Logic/FunctionApp.Logic.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Azure.ResourceManager" Version="1.13.0" />
     <PackageReference Include="Azure.ResourceManager.AppService" Version="1.3.0" />
     <PackageReference Include="Azure.ResourceManager.Logic" Version="1.1.0" />
+    <PackageReference Include="LanguageExt.Core" Version="4.4.9" />
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.2.0" />
   </ItemGroup>
 
