--- a/FunctionApp.Logic/FunctionApp.Logic.csproj
+++ b/FunctionApp.Logic/FunctionApp.Logic.csproj
@@ -8,10 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.13.2" />
+    <PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="1.2.0" />
+    <PackageReference Include="Azure.Monitor.OpenTelemetry.Exporter" Version="1.3.0" />
+    <PackageReference Include="Azure.Monitor.OpenTelemetry.LiveMetrics" Version="1.0.0-beta.3" />
+    <PackageReference Include="Azure.Monitor.Query" Version="1.6.0" />
     <PackageReference Include="Azure.ResourceManager" Version="1.13.0" />
     <PackageReference Include="Azure.ResourceManager.AppService" Version="1.3.0" />
     <PackageReference Include="Azure.ResourceManager.Logic" Version="1.1.0" />
     <PackageReference Include="LanguageExt.Core" Version="4.4.9" />
+    <PackageReference Include="Microsoft.ApplicationInsights" Version="2.22.0" />
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.2.0" />
   </ItemGroup>
 
